initial create transaction request
