# backend/src/modules/finances/presentation/router.py
@@ -1,6 +1,8 @@
 from fastapi import APIRouter
 from fastapi.responses import JSONResponse
 
+from .types import MaintainTransactionRequestDTO
+
 
 class FinancesRouter(APIRouter):
     def __init__(self):
@@ -11,21 +13,28 @@ class FinancesRouter(APIRouter):
 
         self.add_api_route(
             "",
-            lambda: {"message": "List of transactions"},
+            self._list_transactions,
             response_class=JSONResponse,
             methods=["GET"],
         )
 
         self.add_api_route(
             "/",
-            lambda: {"message": "List of transactions"},
+            self._list_transactions,
             response_class=JSONResponse,
             methods=["GET"],
         )
 
         self.add_api_route(
+            "",
+            self._create_transaction,
+            response_class=JSONResponse,
+            methods=["POST"],
+        )
+
+        self.add_api_route(
             "/",
-            lambda: {"message": "Create a new transaction"},
+            self._create_transaction,
             response_class=JSONResponse,
             methods=["POST"],
         )
@@ -43,3 +52,11 @@ class FinancesRouter(APIRouter):
             response_class=JSONResponse,
             methods=["DELETE"],
         )
+
+    def _list_transactions(self):
+        return {"message": "List of transactions"}
+
+    def _create_transaction(self, request: MaintainTransactionRequestDTO):
+        print(request)
+
+        return {"message": "New transaction created"}
