# backend/src/modules/finances/presentation/types.py
@@ -1,0 +1,15 @@
+from enum import Enum
+
+from pydantic import BaseModel
+
+
+class TransactionType(Enum):
+    INCOME = "income"
+    EXPENSE = "expense"
+
+
+class MaintainTransactionRequestDTO(BaseModel):
+    description: str
+    amount: int
+    date: str
+    type: TransactionType
